--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -746,7 +746,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="clearfix"></div>
 			<div class="agile_newsletter_footer">
 					<div class="col-sm-6 newsleft">
-				<h3>SIGN UP FOR NEWSLETTER </h3>
+				<h3>SIGN UP FOR NEWSLETTEr</h3>
 			</div>
 			<div class="col-sm-6 newsright">
 				<form action="#" method="post">
