tweaked app for heroku

--- a/shop/templates/shop/login.html
+++ b/shop/templates/shop/login.html
@@ -43,6 +43,7 @@
 		                 </div>
 						<div style="float: right;width:400px;height:450px;margin-right: 460px;border:1px solid black;text-align:center" >
 						    <br>
+							<h3 class="agileinfo_sign" >Sign In <span>Now</span></h3>
 						<h3 class="agileinfo_sign" >Sign In <span>Now</span></h3>
 							 <form action="" method="post"  novalidate class="shadow p-5">
 						          
