tweaked app for heroku

--- a/shop/templates/shop/login.html
+++ b/shop/templates/shop/login.html
@@ -41,9 +41,9 @@
 						<div class="d-grid" style="margin-left:50px"><a href="{% url 'index' %}"
 		                class="item_add single-item hvr-outline-out button2">Close</a></div>
 		                 </div>
-						<div style="float: right;width:400px;height:450px;margin-right: 460px;border:1px solid black;text-align:center" >
+						<div  >
 						    <br>
-							<h3 class="agileinfo_sign" >Sign In <span>Now</span></h3>
+							
 						<h3 class="agileinfo_sign" >Sign In <span>Now</span></h3>
 							 <form action="" method="post"  novalidate class="shadow p-5">
 						          
