--- a/shop/templates/shop/login.html
+++ b/shop/templates/shop/login.html
@@ -18,13 +18,13 @@
     </script>
     <!--//meta tags ends here-->
     <!--booststrap-->
-    <link href="{% static 'brand/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" media="all">
+    <link href="{% static 'shop/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" media="all">
     <!--//booststrap end-->
     <!-- font-awesome icons -->
-    <link href="{% static 'brand/css/fontawesome-all.min.css' %}" rel="stylesheet" type="text/css" media="all">
+    <link href="{% static 'shop/css/fontawesome-all.min.css' %}" rel="stylesheet" type="text/css" media="all">
     <!-- //font-awesome icons -->
     <!--stylesheets-->
-    <link href="{% static 'brand/css/style.css' %}" rel='stylesheet' type='text/css' media="all">
+    <link href="{% static 'shop/css/style.css' %}" rel='stylesheet' type='text/css' media="all">
     <!--//stylesheets-->
     <link href="//fonts.googleapis.com/css?family=Montserrat:300,400,500" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700" rel="stylesheet">
