--- a/shop/templates/shop/login.html
+++ b/shop/templates/shop/login.html
@@ -71,7 +71,7 @@
 							<br>
 							<div style="text-align:center" class="text-center text-primary
 							 fw-bold"><small style="text-align:center">New to Shopping ? <a href="{% url 'index' %} 
-							 " class="text-danger">Create an Account </a> </small></div>
+							 " class="text-danger">Create an Account by Sign up </a> </small></div>
 							 {% if form.non_field_errors %}
 							  {% for error in form.non_field_errors %}
 							    <p class="alert alert-danger my-3">{{error}}</p>
