tweaked app for heroku

--- a/shop/templates/shop/single.html
+++ b/shop/templates/shop/single.html
@@ -409,7 +409,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 							<div class="w3-address-right">
 								<h6>Phone Number</h6>
-								<p>+1 234 567 8901</p>
+								<p>0300 8787675</p>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
@@ -419,7 +419,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 							<div class="w3-address-right">
 								<h6>Email Address</h6>
-								<p>Email :<a href="mailto:eliteshoppy41@gmail.com"> mail@example.com</a></p>
+								<p>Email :<a href="mailto:eliteshoppy41@gmail.com"> elite11@gmail.com</a></p>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
@@ -429,7 +429,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 							<div class="w3-address-right">
 								<h6>Location</h6>
-								<p>Broome St, NY 10002,California, USA. 
+								<p>Gulistan Colony Sahiwal 
 								
 								</p>
 							</div>
