--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -33,7 +33,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<ul>
            <li> <a href="{% url 'logout' %}"  ><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Logout </a></li>
 
-			<li><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:eliteshoppy41@gmail.com">eliteshoppy41@gmail.com</a></li>
+			<li><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:info@example.com">info@example.com</a></li>
 		</ul>
 	</div>
 </div>
@@ -42,7 +42,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="header-bot">
 	<div class="header-bot_inner_wthreeinfo_header_mid">
 		<div class="col-md-4 header-middle">
-			
+			<form action="#" method="post">
+				<input type="search" name="search" placeholder="Search here..." required="">
+					<input type="submit" value=" ">
+				<div class="clearfix"></div>
+			</form>
 		</div>
 		<!-- header-bot -->
 			<div class="col-md-4 logo_agile">
@@ -52,16 +56,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="col-md-4 agileits-social top_content">
 						<ul class="social-nav model-3d-0 footer-social w3_agile_social">
 						                                   <li class="share">Share On : </li>
-															<li><a href="https://www.facebook.com/" class="facebook">
+															<li><a href="#" class="facebook">
 																  <div class="front"><i class="fa fa-facebook" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-facebook" aria-hidden="true"></i></div></a></li>
-															<li><a href="https://www.twitter.com/" class="twitter"> 
+															<li><a href="#" class="twitter"> 
 																  <div class="front"><i class="fa fa-twitter" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-twitter" aria-hidden="true"></i></div></a></li>
-															<li><a href="https://www.instagram.com/" class="instagram">
+															<li><a href="#" class="instagram">
 																  <div class="front"><i class="fa fa-instagram" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-instagram" aria-hidden="true"></i></div></a></li>
-															<li><a href="https://www.linkedin.com/"class="pinterest">
+															<li><a href="#" class="pinterest">
 																  <div class="front"><i class="fa fa-linkedin" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-linkedin" aria-hidden="true"></i></div></a></li>
 														</ul>
@@ -93,8 +97,73 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				  <ul class="nav navbar-nav menu__list">
 					<li class="active menu_item"><a class="menu_link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a></li>
 					<li class=" menu_item menuitem--current"><a class="menu_link" href="{% url 'about' %}">About</a></li>
-				    <li class=" menu_item"><a class="menu_link" href="{% url 'mens' %}">Mens</a></li>
-					<li class=" menu_item"><a class="menu_link" href="{% url 'womens' %}">Womens</a></li>	
+					<li class="dropdown menu__item">
+						<a href="{% url 'mens' %}" class="dropdown-toggle menu__link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Men's wear <span class="caret"></span></a>
+							<ul class="dropdown-menu multi-column columns-3">
+								<div class="agile_inner_drop_nav_info">
+									<div class="col-sm-6 multi-gd-img1 multi-gd-text ">
+										<a href="{% url 'mens' %}"><img src="{% static 'shop/images/top2.jpg' %}" alt=" "/></a>
+									</div>
+									<div class="col-sm-3 multi-gd-img">
+										<ul class="multi-column-dropdown">
+											<li><a href="{% url 'mens' %}">Clothing</a></li>
+											<li><a href="{% url 'mens' %}">Wallets</a></li>
+											<li><a href="{% url 'mens' %}">Footwear</a></li>
+											<li><a href="{% url 'mens' %}">Watches</a></li>
+											<li><a href="{% url 'mens' %}">Accessories</a></li>
+											<li><a href="{% url 'mens' %}">Bags</a></li>
+											<li><a href="{% url 'mens' %}">Caps & Hats</a></li>
+										</ul>
+									</div>
+									<div class="col-sm-3 multi-gd-img">
+										<ul class="multi-column-dropdown">
+											<li><a href="{% url 'mens' %}">Jewellery</a></li>
+											<li><a href="{% url 'mens' %}">Sunglasses</a></li>
+											<li><a href="{% url 'mens' %}">Perfumes</a></li>
+											<li><a href="{% url 'mens' %}">Beauty</a></li>
+											<li><a href="{% url 'mens' %}">Shirts</a></li>
+											<li><a href="{% url 'mens' %}">Sunglasses</a></li>
+											<li><a href="{% url 'mens' %}">Swimwear</a></li>
+										</ul>
+									</div>
+									<div class="clearfix"></div>
+								</div>
+							</ul>
+					</li>
+					<li class="dropdown menu__item">
+						<a href="{% url 'womens' %}" class="dropdown-toggle menu__link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Women's wear <span class="caret"></span></a>
+							<ul class="dropdown-menu multi-column columns-3">
+								<div class="agile_inner_drop_nav_info">
+									<div class="col-sm-3 multi-gd-img">
+										<ul class="multi-column-dropdown">
+											<li><a href="{% url 'womens' %}">Clothing</a></li>
+											<li><a href="{% url 'womens' %}">Wallets</a></li>
+											<li><a href="{% url 'womens' %}">Footwear</a></li>
+											<li><a href="{% url 'womens' %}">Watches</a></li>
+											<li><a href="{% url 'womens' %}">Accessories</a></li>
+											<li><a href="{% url 'womens' %}">Bags</a></li>
+											<li><a href="{% url 'womens' %}">Caps & Hats</a></li>
+										</ul>
+									</div>
+									<div class="col-sm-3 multi-gd-img">
+										<ul class="multi-column-dropdown">
+											<li><a href="{% url 'womens' %}">Jewellery</a></li>
+											<li><a href="{% url 'womens' %}">Sunglasses</a></li>
+											<li><a href="{% url 'womens' %}">Perfumes</a></li>
+											<li><a href="{% url 'womens' %}">Beauty</a></li>
+											<li><a href="{% url 'womens' %}">Shirts</a></li>
+											<li><a href="{% url 'womens' %}">Sunglasses</a></li>
+											<li><a href="{% url 'womens' %}">Swimwear</a></li>
+										</ul>
+									</div>
+									<div class="col-sm-6 multi-gd-img multi-gd-text ">
+										<a href="{% url 'womens' %}"><img src="{% static 'shop/images/top1.jpg' %}" alt=" "/></a>
+									</div>
+									<div class="clearfix"></div>
+								</div>
+							</ul>
+					</li>
+					
 					<li class=" menu_item"><a class="menu_link" href="{% url 'contact' %}">Contact</a></li>
 					<li class=" menu_item"><a class="menu_link" href="{% url 'profile' %}">Profile</a></li>
 				  </ul>
@@ -144,16 +213,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<input type="submit" value="Sign In">
 						</form>
 						  <ul class="social-nav model-3d-0 footer-social w3_agile_social top_agile_third">
-															<li><a href="https://www.facebook.com/" class="facebook">
+															<li><a href="#" class="facebook">
 																  <div class="front"><i class="fa fa-facebook" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-facebook" aria-hidden="true"></i></div></a></li>
-															<li><a href="https://www.twitter.com/" class="twitter"> 
+															<li><a href="#" class="twitter"> 
 																  <div class="front"><i class="fa fa-twitter" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-twitter" aria-hidden="true"></i></div></a></li>
-															<li><a href="https://www.instagram.com/" class="instagram">
+															<li><a href="#" class="instagram">
 																  <div class="front"><i class="fa fa-instagram" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-instagram" aria-hidden="true"></i></div></a></li>
-															<li><a href="https://www.linkedin.com/" class="pinterest">
+															<li><a href="#" class="pinterest">
 																  <div class="front"><i class="fa fa-linkedin" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-linkedin" aria-hidden="true"></i></div></a></li>
 														</ul>
@@ -207,16 +276,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							 {% endif %}	 
 						</form>
 						  <ul class="social-nav model-3d-0 footer-social w3_agile_social top_agile_third">
-															<li><a href="https://www.facebook.com/" class="facebook">
+															<li><a href="#" class="facebook">
 																  <div class="front"><i class="fa fa-facebook" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-facebook" aria-hidden="true"></i></div></a></li>
-															<li><a href="https://www.twitter.com/" class="twitter"> 
+															<li><a href="#" class="twitter"> 
 																  <div class="front"><i class="fa fa-twitter" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-twitter" aria-hidden="true"></i></div></a></li>
-															<li><a href="https://www.instagram.com/" class="instagram">
+															<li><a href="#" class="instagram">
 																  <div class="front"><i class="fa fa-instagram" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-instagram" aria-hidden="true"></i></div></a></li>
-															<li><a href="https://www.linkedin.com/" class="pinterest">
+															<li><a href="#" class="pinterest">
 																  <div class="front"><i class="fa fa-linkedin" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-linkedin" aria-hidden="true"></i></div></a></li>
 														</ul>
@@ -306,9 +375,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <br>
 <div class="d-grid" style="margin-left:50px"><a href="{% url 'index' %}"
 		class="item_add single-item hvr-outline-out button2">Back to Shopping</a></div>
-		<br>
-		<br>
-<div style="float: right;width:370px;height:300px;margin-right: 50px;border:1px solid black" >
+<div style="float: right;width:370px;height:300px;margin-right: 150px;border:1px solid black" >
     <div class="col-sm-8" >
 	 <div class="card">
 	  <div class="card-body">
@@ -398,11 +465,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="footer_agile_inner_info_w3l">
 		<div class="col-md-3 footer-left">
 			<h2><a href="{% url 'index' %}"><span>E</span>lite Shoppy </a></h2>
-			<p>Elite Shoppy does not sell only clothes 
-			   but footwears and bags too. 
-			   It covers a wide range of fashion items,
-			   and serves both men and women. 
-			   Our goal is to get the customer satisfaction.</p>
+			<p>Lorem ipsum quia dolor
+			sit amet, consectetur, adipisci velit, sed quia non 
+			numquam eius modi tempora.</p>
 			<ul class="social-nav model-3d-0 footer-social w3_agile_social two">
 															<li><a href="https://www.facebook.com/" class="facebook">
 																  <div class="front"><i class="fa fa-facebook" aria-hidden="true"></i></div>
@@ -429,7 +494,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="{% url 'about' %}">About</a></li>
 						
 						<li><a href="{% url 'contact' %}">Contact</a></li>
-						<li><a href="{% url 'profile' %}">Profile</a></li>
 					</ul>
 				</div>
 				{% for data in H %}
@@ -453,7 +517,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 							<div class="w3-address-right">
 								<h6>Email Address</h6>
-								<p>Email :<a href="mailto:eliteshoppy41@gmail.com"> {{ data.email1}}</a></p>
+								<p>Email :<a href="mailto:example@email.com"> {{ data.email1}}</a></p>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
@@ -492,10 +556,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 		</div>
 		<div class="clearfix"></div>
-		
+			<div class="agile_newsletter_footer">
+					<div class="col-sm-6 newsleft">
+				<h3>SIGN UP FOR NEWSLETTER !</h3>
+			</div>
+			<div class="col-sm-6 newsright">
+				<form action="#" method="post">
+					<input type="email" placeholder="Enter your email..." name="email" required="">
+					<input type="submit" value="Submit">
+				</form>
+			</div>
 
 		<div class="clearfix"></div>
 	</div>
+		<p class="copy-right">&copy 2017 Elite shoppy. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
 	</div>
 </div>
 <!-- //footer -->
