--- a/shop/templates/shop/index1.html
+++ b/shop/templates/shop/index1.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>Sign up</H1> 
+    <H1>Sign Up</H1> 
     <table class="table">
         <thead>
             <tr>
